# networkcommons

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  1_data.ipynb  2_knowledge.ipynb  3_methods.ipynb  LICENSE  README.md  environment.yaml  environment.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yaml  install.yaml  main.yml  sphinx_autodoc.yaml  test.yaml
docs/source/: api.rst  conf.py  contents.rst  data.rst  index.rst  installation.rst  requirements.txt
docs/source/_static/css/: custom.css
docs/source/_templates/autosummary/: base.rst  class.rst
docs/source/api/: data.rst  index.rst
docs/source/vignettes/: 2_moon.ipynb
docs/src/: api.rst  benchmarks.rst  conf.py  contents.rst  datasets.rst  index.rst  installation.rst  methods.rst  requirements.txt
docs/src/_static/css/: custom.css
docs/src/_templates/autosummary/: class.rst
docs/src/guidelines/: Guideline 1: Data.ipynb  guide_1_data.ipynb  guide_2_methods.ipynb  guide_2_methods.rst  guide_3_eval.rst  landing.rst
docs/src/vignettes/: 1_offtarget_panacea.ipynb  1_quickstart.ipynb  1_simple_example.ipynb  2_moon.ipynb  2_multiple_methods.ipynb  3_evaluation_decryptm.ipynb  3_evaluation_offt_path.ipynb  4_cptac_phosphoactivity.ipynb  4_evaluation_decryptm.ipynb  4_moon.ipynb  5_cptac_phosphoactivity.ipynb  5_evaluation_decryptm.ipynb  6_cptac_phosphoactivity.ipynb  6_moon.ipynb  A_moon.ipynb  B_pertpy.ipynb  B_phospho_egf_data.ipynb  B_signalingprofiler.ipynb
flop_run/: params_flop.json
networkcommons/: __init__.py  _conf.py  _imports.py  _metadata.py  _session.py  _utils.py  data.py  datasets.py  eval.py  evaluation.py  methods.py  moon.py  noi.py  prior_knowledge.py  temp_logger.py  utils.py  visual.py  visualization.py
networkcommons/_data/: __init__.py  _builtin.py  _omics.py  config.yaml  datasets.yaml
networkcommons/_data/_network/: __init__.py  _lianaplus.py  _moon.py
networkcommons/_data/_omics/: __init__.py  _common.py  _decryptm.py  _decryptm_ebi.py  _deseq2.py  _moon.py  _panacea.py
networkcommons/_data/network/: __init__.py  biocypher.py  moon.py  omnipath.py
networkcommons/_data/omics/: __init__.py  _moon.py  common.py  deseq2.py  panacea.py  scperturb.py
networkcommons/_eval/: __init__.py  _graph.py
networkcommons/_methods/: __init__.py  _causal.py  _graph.py  _moon.py  moon.py
networkcommons/_noi/: __init__.py  _node.py  _noi.py
networkcommons/_visual/: __init__.py  _aux.py  _network_mock.py  _networkx.py  layouts.py  network_stats.py  rnaseq.py  styles.py  vis_networkx.py  vis_yfiles.py  yfiles.py  yfiles_styles.py
networkcommons/data/: __init__.py  _builtin.py  config.yaml  datasets.yaml  urls.yaml
networkcommons/data/network/: __init__.py  _liana.py  _moon.py  _omnipath.py
networkcommons/data/omics/: __init__.py  _common.py  _cptac.py  _decryptm.py  _decryptm_ebi.py  _deseq2.py  _moon.py  _nci60.py  _panacea.py  _phosphoegf.py  _scperturb.py  decryptm.py  decryptm_ebi.py
networkcommons/eval/: __init__.py  _metrics.py
networkcommons/methods/: __init__.py  _causal.py  _graph.py  _moon.py  _signalingprofiler.py
networkcommons/network/: __init__.py  _bootstrap.py  _constants.py  _network.py
networkcommons/network/_bootstrap/: __init__.py  _base.py  _copy.py  _df.py  _edgelist.py
networkcommons/network/_formats/: __init__.py  _igraph.py  _networkx.py
networkcommons/noi/: __init__.py  _node.py  _noi.py
networkcommons/test/: test_datasets.py  test_evaluation.py  test_methods.py  test_moon.py
networkcommons/visual/: __init__.py  _aux.py  _network_stats.py  _rnaseq.py  _styles.py  _vis_networkx.py  _vis_yfiles.py  _yfiles_styles.py  network_stats.py  rnaseq.py
networkcommons/visual/vis_demo/: network_vis_demo.ipynb
networkcommons/visual/vis_demo/demo_networks/: extra_large_network.csv  gen_networks.py  large_network.csv  medium_network.csv  small_network.csv
tests/: _network_mock.py  conftest.py  test_datasets.py  test_deseq2.py  test_eval_graph.py  test_evaluation.py  test_formats.py  test_methods_causal.py  test_methods_graph.py  test_moon.py  test_network_base_init.py  test_network_bootstrap.py  test_network_bootstrap_df.py  test_network_stats.py  test_node.py  test_noi.py  test_omics.py  test_pk.py  test_rnaseq.py  test_utils.py  test_vis_aux.py  test_vis_networkx.py  test_vis_rnaseq.py  test_vis_styles.py  test_vis_yfiles.py  test_visual.py  test_visual_networkx.py  test_visualisation.py  test_yfiles_styles.py
tests/test_files/: sample_net.sif  simulated_rnaseq_data.csv
vignettes/: 1_simple_example.ipynb  2_moon.ipynb
